--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,17 +11,18 @@ buildscript {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
-
+    compileSdkVersion 24
+    buildToolsVersion '25.0.3'
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
     lintOptions {
         abortOnError false
+    }
+    productFlavors {
     }
 }
 
